[gd_scene load_steps=4 format=2]

[ext_resource path="res://playerside/hit.svg" type="Texture" id=1]
[ext_resource path="res://playerside/dodge.svg" type="Texture" id=2]
[ext_resource path="res://playerside/Buttons.gd" type="Script" id=3]

[node name="Buttons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 120.0
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 115.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="DodgeLeftButton" type="TouchScreenButton" parent="HBoxContainer/Control"]
position = Vector2( 115, 0 )
scale = Vector2( -2.4, 2.4 )
normal = ExtResource( 2 )

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 234.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="HitLeftButton" type="TouchScreenButton" parent="HBoxContainer/Control2"]
position = Vector2( 115, 0 )
scale = Vector2( -2.4, 2.4 )
normal = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 238.0
margin_right = 242.0
margin_bottom = 120.0

[node name="Control3" type="Control" parent="HBoxContainer"]
margin_left = 246.0
margin_right = 361.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="HitRightButton" type="TouchScreenButton" parent="HBoxContainer/Control3"]
scale = Vector2( 2.4, 2.4 )
normal = ExtResource( 1 )

[node name="Control4" type="Control" parent="HBoxContainer"]
margin_left = 365.0
margin_right = 480.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="DodgeRightButton" type="TouchScreenButton" parent="HBoxContainer/Control4"]
scale = Vector2( 2.4, 2.4 )
normal = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/Control/DodgeLeftButton" to="." method="_on_DodgeLeftButton_pressed"]
[connection signal="released" from="HBoxContainer/Control/DodgeLeftButton" to="." method="_on_Dodge_released"]
[connection signal="pressed" from="HBoxContainer/Control2/HitLeftButton" to="." method="_on_HitLeftButton_pressed"]
[connection signal="released" from="HBoxContainer/Control2/HitLeftButton" to="." method="_on_Hit_released"]
[connection signal="pressed" from="HBoxContainer/Control3/HitRightButton" to="." method="_on_HitRightButton_pressed"]
[connection signal="released" from="HBoxContainer/Control3/HitRightButton" to="." method="_on_Hit_released"]
[connection signal="pressed" from="HBoxContainer/Control4/DodgeRightButton" to="." method="_on_DodgeRightButton_pressed"]
[connection signal="released" from="HBoxContainer/Control4/DodgeRightButton" to="." method="_on_Dodge_released"]
